try to run the server with sudo if failed